src/App.css
/* ... */
.language__title {
  position: absolute;
  font-size: 16px;
}

/* 

Projects

*/

.projects {
  position: relative;
  width: 100%;
  display: grid;
  gap: 50px;
  grid-template-columns: 1fr 1fr;
}

.project {
  border-radius: 12px;
  overflow: hidden;
  width: 100%;
  display: flex;
  min-height: 619px;
}

.project:hover .project__img {
  transform: scale(1.07) !important;
}

.project__img--wrapper {
  position: relative;
  overflow: hidden;
  font-size: 0;
  line-height: 0;
  width: 50%;
}

.project__img {
  transition: transform 300ms ease-in-out;
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
}

.project__languages--wrapper {
  pointer-events: none;
  display: flex;
  justify-content: flex-start;
  gap: 8px;
  align-items: center;
  z-index: 1000;
  position: absolute;
  bottom: 4px;
  left: 0;
  height: 30px;
  width: 100%;
  padding: 0 8px;
}

.project__language {
  font-size: 0.8rem;
  background-color: #111;
  color: white;
  padding: 10px;
  border-radius: 50px;
}

.project__info {
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: space-between;
  padding: 40px;
  width: 50%;
}

.project--viewport-trigger {
  position: absolute;
  top: 0;
  right: 0;
  height: 3px;
  width: 3px;
}

.project-buttons--wrapper {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 16px;
}

.projectsBtn {
  outline: none;
  border: none;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  color: white;
  text-decoration: none;
  background-color: #33b9de;
  font-size: 1.3rem;
  padding: 8px 16px;
  border-radius: 8px;
  /* min-width: 129.22px; */
  text-align: center;
}

.projectsBtn--black {
  /* grid-column: 2 / 3; */
  background-color: rgb(51, 51, 51);
  /* min-width: 163.63px; */
}

.bg--gray {
  background-color: rgb(14, 57, 72);
}

.projectsBtn--gray {
  grid-row: 1;
  grid-column: 1 / 3;
  background-color: rgb(14, 57, 72);
  /* min-width: 163.63px; */
}
projectsBtn--black .project__title {
  font-size: 48px;
  font-weight: 500;
}

.project__para {
  white-space: pre-line;
  text-align: justify;
  line-height: 1.75;
  margin: 24px 0;
}

.project__more-info--bg {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(68, 68, 68, 0.5);
  z-index: 1000;
  display: flex;
  align-items: center;
  justify-content: center;
}

.project__more-info--wrapper {
  position: relative;
  border-radius: 20px;
  width: 100%;
  max-width: 1300px;
  height: 90vh;
  margin: 0 64px;
  padding: 64px 22px 32px 32px;
  background-color: white;
}

.project__more-info {
  height: calc(90vh - 64px * 2);
  overflow: hidden;
  overflow-y: auto;
}

.project__more-info > div {
  display: flex;
  gap: 16px;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.project__more-info ul {
  list-style-type: disc;
  list-style-position: inside;
}

.project__more-info img {
  max-width: 100%;
}

.closeBtn--more-info {
  cursor: pointer;
  font-size: 2.5rem;
  position: absolute;
  top: -16px;
  right: -16px;
  background-color: rgb(212, 212, 212);
  padding: 4px;
  border-radius: 50%;
}

/*

Resume

*/

.resume__container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.pdf--wrapper {
  /* background-color: white; */
  width: 100%;
  aspect-ratio: 0.863;
  margin: 0 auto;
  max-width: 1300px;
}

.pdfDownloadBtn {
  text-decoration: none;
  color: black;
  font-size: 1.7rem;
  padding: 8px 12px;
  border-radius: 12px;
  transition-duration: 0.3s;

  display: inline-flex;
  align-items: center;
  margin: 8px;
}

.downloadBtn-arrow {
  color: black;
  margin-left: 8px;
  transition-duration: 0.3s;
}

.pdfDownloadBtn:hover {
  color: white;
  background-color: #33b9de;
  box-shadow: 0 4px 6px hsla(0, 0%, 0%, 0.2);
}

.pdfDownloadBtn:active {
  filter: brightness(0.9);
  box-shadow: 0 1px 3px hsla(0, 0%, 0%, 0.2);
}

.pdfDownloadBtn:hover .downloadBtn-arrow {
  color: white;
  transform: rotate(90deg);
}

.parallax-background-image--wrapper {
  position: absolute;
  top: -100px;
  left: -200px;
  right: -200px;
  bottom: -100px;
}

.parallax-background-image {
  width: 100%;
  height: 100%;
  object-fit: cover;

  z-index: -1;
}

.parallax__info--wrapper {
  z-index: 100;
}

.resume__title {
}

.rpv-core__inner-page {
  background-color: transparent !important;
}

/* 

Modal

*/

.modal__container {
  position: absolute;
  top: 80px;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.5);
}

.modal {
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  width: 300px;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.95);
  backdrop-filter: blur(10px);

  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-direction: column;
}

.modal__links {
  display: flex;
  flex-direction: column;
}

.modal__link {
  cursor: pointer;
  text-decoration: none;
  margin-top: 32px;
  color: white;
  font-size: 32px;
}

/* 

Contact

*/

.contact__container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.contact__title {
  padding-top: 100px;
  margin-bottom: 24px;
  font-weight: 500;
  font-size: 100px;
  color: #111;
  overflow: hidden;
}

.contact__para--description {
  margin-bottom: 100px;
  max-width: 460px;
  line-height: 1.5;
}

.contact-form {
  background-color: white;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 8px;
  padding: 80px;
  max-width: 550px;
  width: 100%;
  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
  border-radius: 20px;
  margin-bottom: 100px;
}

.contact__label {
  color: black;
  font-weight: 500;
  width: 100%;
}

.contact__input {
  line-height: 1.5;
}

.contact__input,
.contact__textarea {
  border: 2px solid #a4a4a4;
  outline: none;
  border-radius: 4px;
  padding: 10px 4px 10px 40px;
  width: 100%;
}
/* ... */

